--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ API_URL=API URL
 ENDPOINT=STK PUSH REQUEST URL
 CONSUMER_KEY=YOUR APP CONSUMER KEY
 CONSUMER_SECRET=YOUR APP CONSUMER SECRET
+PASSKEY=YOUR PASSKEY
